net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/SubnetRouteTableTest[2018-11-01].json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-4fd4fb714e21508e27c8b53ec1f6c01d-8ca5ec4d7609ba6c-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "c905e1f9f6b1e293761665a0683a224e",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:04 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "61c2336b-f3d9-4c53-a955-687a8ae8471c",
        "x-ms-ratelimit-remaining-subscription-reads": "11767",
        "x-ms-request-id": "61c2336b-f3d9-4c53-a955-687a8ae8471c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155105Z:61c2336b-f3d9-4c53-a955-687a8ae8471c"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg704?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-8596c7404a1590b924eba8c468fa3a03-6d457dceab063ffd-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "2f1e03f9a8cd3b90ceca437a94206808",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "213",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:05 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "a87c61fe-5d5f-442e-b2f2-6e297dec4588",
        "x-ms-ratelimit-remaining-subscription-writes": "1145",
        "x-ms-request-id": "a87c61fe-5d5f-442e-b2f2-6e297dec4588",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155106Z:a87c61fe-5d5f-442e-b2f2-6e297dec4588"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704",
        "name": "csmrg704",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "182",
        "Content-Type": "application/json",
        "traceparent": "00-6a0accfc8e983351977d2db90945d0ff-4e1866a593972790-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d6280fcfacdeca84730669ce90d1189a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "routes": [
            {
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/cbc13a97-7315-4f1c-82b8-8d54eecf45f5?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1031",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:08 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "47195492-3c53-4a62-9319-1ac313b79c20",
        "x-ms-client-request-id": "d6280fcfacdeca84730669ce90d1189a",
        "x-ms-correlation-request-id": "1fe338c2-b211-4729-8829-901885664386",
        "x-ms-ratelimit-remaining-subscription-writes": "1144",
        "x-ms-request-id": "cbc13a97-7315-4f1c-82b8-8d54eecf45f5",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155108Z:1fe338c2-b211-4729-8829-901885664386"
      },
      "ResponseBody": {
        "name": "azsmnet711",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711",
        "etag": "W/\"5cf6968b-d42d-4189-ac8d-9146ca9438a9\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "7c270c1b-348b-40ad-a7bf-37411c278990",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet393",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711/routes/azsmnet393",
              "etag": "W/\"5cf6968b-d42d-4189-ac8d-9146ca9438a9\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/cbc13a97-7315-4f1c-82b8-8d54eecf45f5?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-6a0accfc8e983351977d2db90945d0ff-826fe692c962f0fe-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3f537b3423f37124aa02348ad2003972",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:08 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "fdce6d53-7935-44c6-bb62-0a46d70d37ac",
        "x-ms-client-request-id": "3f537b3423f37124aa02348ad2003972",
        "x-ms-correlation-request-id": "f41e542d-5e11-4f96-91e6-de919feb3aa4",
        "x-ms-ratelimit-remaining-subscription-reads": "11766",
        "x-ms-request-id": "15e7986d-c65e-4a6e-8e5a-48fb7de5d84d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155109Z:f41e542d-5e11-4f96-91e6-de919feb3aa4"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-6a0accfc8e983351977d2db90945d0ff-f04823ec3780bdf2-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "a333f961c8ae96939a9af2b25d1ce97c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1033",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:08 GMT",
        "ETag": "W/\"21c8349d-a791-4505-b885-63a15f24e343\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6ebca0a3-9af7-4fda-ad7e-b606e600977b",
        "x-ms-client-request-id": "a333f961c8ae96939a9af2b25d1ce97c",
        "x-ms-correlation-request-id": "d09013f4-9cc2-446f-8e17-af0119b9d605",
        "x-ms-ratelimit-remaining-subscription-reads": "11765",
        "x-ms-request-id": "d06b05a6-4547-4ee0-ab6b-eaefeb7ee55b",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155109Z:d09013f4-9cc2-446f-8e17-af0119b9d605"
      },
      "ResponseBody": {
        "name": "azsmnet711",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711",
        "etag": "W/\"21c8349d-a791-4505-b885-63a15f24e343\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "7c270c1b-348b-40ad-a7bf-37411c278990",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet393",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711/routes/azsmnet393",
              "etag": "W/\"21c8349d-a791-4505-b885-63a15f24e343\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-ea9918545d748d8a2286990c68a08f6e-d11e10c113059ed5-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "149ad109d97ec9a7a0e8c12803eabbe3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1033",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:09 GMT",
        "ETag": "W/\"21c8349d-a791-4505-b885-63a15f24e343\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a97805f4-6c66-47f4-81e7-53bf13ad27f0",
        "x-ms-client-request-id": "149ad109d97ec9a7a0e8c12803eabbe3",
        "x-ms-correlation-request-id": "b5941168-b7a3-46c3-9441-47186c286848",
        "x-ms-ratelimit-remaining-subscription-reads": "11764",
        "x-ms-request-id": "5969bf42-d1a4-4e06-8c1f-fef0c72f9fee",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155110Z:b5941168-b7a3-46c3-9441-47186c286848"
      },
      "ResponseBody": {
        "name": "azsmnet711",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711",
        "etag": "W/\"21c8349d-a791-4505-b885-63a15f24e343\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "7c270c1b-348b-40ad-a7bf-37411c278990",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet393",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711/routes/azsmnet393",
              "etag": "W/\"21c8349d-a791-4505-b885-63a15f24e343\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/virtualNetworks/azsmnet613?api-version=2025-07-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "385",
        "Content-Type": "application/json",
        "traceparent": "00-8ab112166c0bfa8f46db718ad8a6d016-c65fa543ef4c136a-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "5ac3e7076be9bce8a4583071148e19b7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "properties": {
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711"
                }
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/31efac89-2e73-47fc-8011-b80eeefd2ab6?api-version=2025-07-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1166",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:11 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "3",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "93efc9dc-ffe0-44a6-b541-f04013128a15",
        "x-ms-client-request-id": "5ac3e7076be9bce8a4583071148e19b7",
        "x-ms-correlation-request-id": "0caaa929-d0a6-4997-a4a3-1e1d0c484f99",
        "x-ms-ratelimit-remaining-subscription-writes": "1143",
        "x-ms-request-id": "31efac89-2e73-47fc-8011-b80eeefd2ab6",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155112Z:0caaa929-d0a6-4997-a4a3-1e1d0c484f99"
      },
      "ResponseBody": {
        "name": "azsmnet613",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/virtualNetworks/azsmnet613",
        "etag": "W/\"752d39f5-e195-4c13-b8db-90d27c40b2fa\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "86f5b072-3a2f-4897-8387-186c0e1ac772",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet8675",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/virtualNetworks/azsmnet613/subnets/azsmnet8675",
              "etag": "W/\"752d39f5-e195-4c13-b8db-90d27c40b2fa\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/31efac89-2e73-47fc-8011-b80eeefd2ab6?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-8ab112166c0bfa8f46db718ad8a6d016-e6029a706d798f63-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "01147fc0aeb92ee82cc2354e982ed433",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "23",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:12 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5b1042ea-b35c-4524-8c5f-dfce3ea4880a",
        "x-ms-client-request-id": "01147fc0aeb92ee82cc2354e982ed433",
        "x-ms-correlation-request-id": "e4162945-3403-4295-9bd7-6cb63f5fd1c6",
        "x-ms-ratelimit-remaining-subscription-reads": "11763",
        "x-ms-request-id": "0cd7c600-6519-4540-ae5b-fb1d35990168",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155112Z:e4162945-3403-4295-9bd7-6cb63f5fd1c6"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/31efac89-2e73-47fc-8011-b80eeefd2ab6?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-8ab112166c0bfa8f46db718ad8a6d016-6409be23c1f4eb58-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "bb694c0fcc7d80ea95585723647d29f3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:23 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "64fd494a-678c-47f6-95ee-bc285034da9a",
        "x-ms-client-request-id": "bb694c0fcc7d80ea95585723647d29f3",
        "x-ms-correlation-request-id": "94848cbd-c5b2-4a31-9161-3bfd89f01622",
        "x-ms-ratelimit-remaining-subscription-reads": "11762",
        "x-ms-request-id": "ddd2df62-9399-4263-863a-c10ab7301bf1",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155123Z:94848cbd-c5b2-4a31-9161-3bfd89f01622"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/virtualNetworks/azsmnet613?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-8ab112166c0bfa8f46db718ad8a6d016-44d0cd59dd8ad613-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "95b020791779d2fe1736f8315103d1d4",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1168",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:23 GMT",
        "ETag": "W/\"65c6200c-9f60-49c3-8899-45f36a515f9a\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0d19a028-c4fc-49e4-b3b6-6d608d5fdc4e",
        "x-ms-client-request-id": "95b020791779d2fe1736f8315103d1d4",
        "x-ms-correlation-request-id": "a9a23474-9785-42a9-bb8a-62bbca1f1458",
        "x-ms-ratelimit-remaining-subscription-reads": "11761",
        "x-ms-request-id": "261fe609-bcd0-4839-897b-cf1fc60f6188",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155123Z:a9a23474-9785-42a9-bb8a-62bbca1f1458"
      },
      "ResponseBody": {
        "name": "azsmnet613",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/virtualNetworks/azsmnet613",
        "etag": "W/\"65c6200c-9f60-49c3-8899-45f36a515f9a\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "86f5b072-3a2f-4897-8387-186c0e1ac772",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet8675",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/virtualNetworks/azsmnet613/subnets/azsmnet8675",
              "etag": "W/\"65c6200c-9f60-49c3-8899-45f36a515f9a\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/virtualNetworks/azsmnet613/subnets/azsmnet8675?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-02222e677aa8edb354cca043103aae34-748c88c90e2d25c7-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "475bd3f12446f49294946c6057c5caae",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "617",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:24 GMT",
        "ETag": "W/\"65c6200c-9f60-49c3-8899-45f36a515f9a\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2a1cfaa4-dd74-4709-a5ed-68f6f9d616e6",
        "x-ms-client-request-id": "475bd3f12446f49294946c6057c5caae",
        "x-ms-correlation-request-id": "37b4b096-87cb-40e6-b20a-f50cd129ea20",
        "x-ms-ratelimit-remaining-subscription-reads": "11760",
        "x-ms-request-id": "ae351603-686c-4cba-91f7-c1eb186701dc",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155124Z:37b4b096-87cb-40e6-b20a-f50cd129ea20"
      },
      "ResponseBody": {
        "name": "azsmnet8675",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/virtualNetworks/azsmnet613/subnets/azsmnet8675",
        "etag": "W/\"65c6200c-9f60-49c3-8899-45f36a515f9a\"",
        "properties": {
          "provisioningState": "Succeeded",
          "addressPrefix": "10.0.0.0/24",
          "routeTable": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711"
          },
          "delegations": [],
          "privateEndpointNetworkPolicies": "Disabled",
          "privateLinkServiceNetworkPolicies": "Enabled"
        },
        "type": "Microsoft.Network/virtualNetworks/subnets"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-02a1ccdf8886bc3b533c613242fd4802-27a8c94bd6322d07-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "78d541983e7df7b94d97a346d4b82e91",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1246",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:51:24 GMT",
        "ETag": "W/\"94007067-3c83-4f2f-a1a2-1a82b0de683f\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "bfc395ca-d3cb-4d62-96bc-a50ad67fbe38",
        "x-ms-client-request-id": "78d541983e7df7b94d97a346d4b82e91",
        "x-ms-correlation-request-id": "e2d929a3-2608-4e4d-8f09-7342bd440a9f",
        "x-ms-ratelimit-remaining-subscription-reads": "11759",
        "x-ms-request-id": "8475dda9-d30a-4413-9c46-8b6961e9588a",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155124Z:e2d929a3-2608-4e4d-8f09-7342bd440a9f"
      },
      "ResponseBody": {
        "name": "azsmnet711",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711",
        "etag": "W/\"94007067-3c83-4f2f-a1a2-1a82b0de683f\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "7c270c1b-348b-40ad-a7bf-37411c278990",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet393",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/routeTables/azsmnet711/routes/azsmnet393",
              "etag": "W/\"94007067-3c83-4f2f-a1a2-1a82b0de683f\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ],
          "subnets": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg704/providers/Microsoft.Network/virtualNetworks/azsmnet613/subnets/azsmnet8675"
            }
          ]
        }
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1508140676",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
